--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 .container{
-    width: 100;
-    height:1080px;
+    width: 100%;
+    height:auto;
     background:url("fin.jpg");
     background-size: cover;
     height: 100vh;
@@ -79,7 +79,8 @@ i:hover{
         grid-template-columns: none;
         display: block;
         top: 5%;
-        height: 80vh;
+        bottom: 5%;
+        height: 90vh;
 
     }
     .dp{
@@ -115,7 +116,7 @@ i:hover{
     
     .dp img{
       
-        width:   40%;
+        width:   30%;
         
     }
     
@@ -128,7 +129,7 @@ i:hover{
     
     .dp img{
       
-        width:10%;
+        width: 40%;
         
     }
 }
@@ -136,7 +137,8 @@ i:hover{
 @keyframes text{
     0%{
         color: grey;
-        margin-bottom: 85px;
+       margin-bottom: 85px;
+       
     }
 
 }
